# claude-pro-coder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  SKILL.md
.claude/state/: claude_md_proposals.md  current_section.md
.claude/state/code-map/: lens-csharp-extractor.md  scripts-safety-helpers.md  scripts-test-suite.md  scripts-uninstall.md
.github/workflows/: ci.yml
.history/2026-05-03/: README.md
.history/2026-05-03/lens/crates/lens-core/: Cargo.toml
.history/2026-05-17/scripts/: install.sh
diagram/: SKILL.md
examples/: 01-rust-feature.md  02-python-bug-fix.md  03-cross-language-refactor.md  04-docs-fast-path.md  05-section-boundary.md  README.md
lens/: .gitignore  Cargo.toml  README.md  VENDOR.txt
lens/crates/lens-cli/: .gitignore  Cargo.toml
lens/crates/lens-cli/src/: cli.rs  main.rs
lens/crates/lens-cli/src/cmd/: add.rs  explain.rs  follow.rs  index.rs  init.rs  map.rs  mcp.rs  meter.rs  mod.rs  path.rs  query.rs  refs.rs  slice.rs  stub.rs  update.rs  util.rs  watch.rs
lens/crates/lens-cli/tests/: add_e2e.rs  cli.rs  index_integration.rs  init.rs  path_explain_e2e.rs
lens/crates/lens-core/: Cargo.toml
lens/crates/lens-core/src/: error.rs  explain.rs  fetch.rs  follow.rs  freshness.rs  lib.rs  map.rs  meter.rs  path.rs  query.rs  refs.rs  slice.rs  watch.rs
lens/crates/lens-core/src/extract/: mod.rs  pipeline.rs  types.rs
lens/crates/lens-core/src/lang/: dart.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  registry.rs  rust.rs  typescript.rs
lens/crates/lens-core/src/parse/: mod.rs
lens/crates/lens-core/src/storage/: db.rs  diff.rs  insert.rs  migrations.rs  mod.rs  resolve.rs  schema.sql  update.rs
lens/crates/lens-core/src/walk/: discover.rs  mod.rs
lens/crates/lens-core/tests/: composite_extraction.rs
pro-coder/: SKILL.md
scripts/: _lib.sh  install-lens.sh  install-mcp.sh  install.sh  uninstall.sh
scripts/test/: round_trip.sh  skill_meta.sh
super-coder/: SKILL.md
(+4 files in other folders)
