[workspace]
members = [
    "crates/lens-core",
    "crates/lens-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Lens contributors"]
repository = "https://github.com/sudeep-dasgupta/lens"
description = "Symbol-aware code map for Claude. Replaces graphify with a precomputed Ctrl+Click index."
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
