[package]
name = "lens-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lens CLI — symbol-aware code navigation for Claude."

[[bin]]
name = "lens"
path = "src/main.rs"

[dependencies]
lens-core = { path = "../lens-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.10"
