[package]
name = "lens-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core indexer and resolver for Lens."

[dependencies]
thiserror = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-dart = "0.0.4"
tree-sitter-java = "0.21"
blake3 = "1.5"
ignore = "0.4"
rayon = "1.10"
notify = "6.1"
notify-debouncer-mini = "0.4"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
